--- a/style.css
+++ b/style.css
@@ -240,9 +240,9 @@ float: right;
 }
 
 .news {
-    /* clip-path: polygon(0% 35%, 100% 0%,100% 100%,0% 100%); */
+    
     background: linear-gradient(90deg, rgba(0,0,163,1) 35%, rgba(0,0,255,1) 100%);
-    padding-bottom: 151px;
+    /* padding-bottom: 151px; */
 }
 
 .icon_group {
