fix svg section news

--- a/style.css
+++ b/style.css
@@ -125,6 +125,12 @@ button:focus {
         height: 150px;
 }
 
+.news svg{
+    bottom: 0;
+    width: 100%;
+    height: 150px;
+}
+
 .content {
     padding-top: 200px;
     padding-bottom: 100px;
@@ -258,11 +264,14 @@ float: right;
 }
 
 .news h2 {
-    padding-top: 247px;
-    clip-path: none;
+    margin: 36px;
     color: #FFFFFF;
     text-align: center;
     
+}
+
+.news div {
+    padding-bottom: 151px;
 }
 
 .button_episodes {
@@ -272,7 +281,7 @@ float: right;
     height: 56px;
     width: 345px;
     background: #00F3BB;
-    text-align: center;
+    text-align: center;    
     
 }
 
